--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-monorepo/source",
+  "name": "@clutterfreefinds-v2/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {},
