--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  pull_request:
+  pull_request: -main
 
 jobs:
   main:
@@ -25,6 +25,11 @@ jobs:
           cache: 'npm'
       - run: npm ci
       - uses: nrwl/nx-set-shas@v4
+        with:
+        token: ${{secrets.github_personal}}
+          main-branch-name: 'main'
+          last-succesful-event: 'push'
+          workflow-id: 'ci.yml'
 
       - run: npx nx-cloud record -- nx format:check
       - run: npx nx affected -t lint test build e2e-ci
