--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - run: npm ci
       - uses: nrwl/nx-set-shas@v4
         with:
-          token: ${{secrets.github_personal}}
+          gh_token: ${{secrets.github_personal}}
           main-branch-name: 'main'
           last-succesful-event: 'push'
           workflow-id: 'ci.yml'
