--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          token: ${{secrets.github_personal}}
 
       # Connect your workspace on nx.app and uncomment this to enable task distribution.
       # The "--stop-agents-after" is optional, but allows idle agents to shut down once the "e2e-ci" targets have been requested
@@ -26,7 +27,6 @@ jobs:
       - run: npm ci
       - uses: nrwl/nx-set-shas@v4
         with:
-          gh_token: ${{secrets.github_personal}}
           main-branch-name: 'main'
           last-succesful-event: 'push'
           workflow-id: 'ci.yml'
