--- a/apps/website/project.json
+++ b/apps/website/project.json
@@ -21,8 +21,7 @@
           "apps/website/src/styles.scss",
           "node_modules/bootstrap/dist/css/bootstrap.min.css"],
         "scripts": [
-          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
-          "node_modules/@popperjs/core/dist/umd/popper.min.js"
+          "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
         ],
         "server": "apps/website/src/main.server.ts",
         "prerender": true,
