--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@clutterfreefinds-v2/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start:website": "nx serve website"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.1.0",
