--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~16.1.0",
+    "@angular/cdk": "^15.0.3",
     "@angular/common": "~16.1.0",
     "@angular/compiler": "~16.1.0",
     "@angular/core": "~16.1.0",
     "@angular/forms": "~16.1.0",
+    "@angular/material": "^15.0.4",
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/platform-server": "~16.1.0",
@@ -21,8 +23,11 @@
     "@ngx-translate/http-loader": "^8.0.0",
     "@nx/angular": "18.0.4",
     "@popperjs/core": "^2.11.8",
-    "bootstrap": "^5.3.2",
-    "express": "~4.18.2",
+    "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.18.2",
+    "ngx-toastr": "^18.0.0",
+    "ngx-translate-cache": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
@@ -50,6 +55,7 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@types/bootstrap": "^5.2.10",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "4.17.14",
     "@types/jest": "^29.4.0",
     "@types/minimist": "^1.2.5",
