--- a/apps/website/mfe/tsconfig.server.json
+++ b/apps/website/mfe/tsconfig.server.json
@@ -2,9 +2,13 @@
 {
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
-    "outDir": "../../out-tsc/server",
-    "target": "es2019",
-    "types": ["node"]
+    "outDir": "./out-tsc/server",
+    "types": [
+      "node"
+    ]
   },
-  "files": ["src/main.server.ts", "server.ts"]
+  "files": [
+    "src/main.server.ts",
+    "server.ts"
+  ]
 }
