config: change mfe name and update scripts

--- a/apps/website/mfe/project.json
+++ b/apps/website/mfe/project.json
@@ -2,7 +2,7 @@
   "name": "website-mfe",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "angular-monorepo",
+  "prefix": "wc",
   "sourceRoot": "apps/website/mfe/src",
   "tags": [],
   "targets": {
@@ -25,8 +25,8 @@
         "apps/website/mfe/src/styles.scss"
       ],
       "scripts": [
-        "node_modules/bootstrap/dist/js/bootstrap.min.js",
-        "node_modules/@popperjs/core/dist/umd/popper.min.js"
+        "node_modules/@popperjs/core/dist/umd/popper.min.js",
+        "node_modules/bootstrap/dist/js/bootstrap.min.js"
       ]
       },
       "configurations": {
