--- a/apps/website/mfe/tsconfig.server.json
+++ b/apps/website/mfe/tsconfig.server.json
@@ -2,13 +2,9 @@
 {
   "extends": "./tsconfig.app.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/server",
-    "types": [
-      "node"
-    ]
+    "outDir": "../../out-tsc/server",
+    "target": "es2019",
+    "types": ["node"]
   },
-  "files": [
-    "src/main.server.ts",
-    "server.ts"
-  ]
+  "files": ["src/main.server.ts", "server.ts"]
 }
