--- a/apps/instant-quote/mfe/project.json
+++ b/apps/instant-quote/mfe/project.json
@@ -2,25 +2,25 @@
   "name": "instant-quote",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "prefix": "clutterfreefinds-v2",
-  "sourceRoot": "apps/instant-quote/intant-quote/src",
+  "prefix": "iq",
+  "sourceRoot": "apps/instant-quote/mfe/src",
   "tags": [],
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/apps/instant-quote/intant-quote",
-        "index": "apps/instant-quote/intant-quote/src/index.html",
-        "main": "apps/instant-quote/intant-quote/src/main.ts",
+        "outputPath": "dist/apps/instant-quote/mfe",
+        "index": "apps/instant-quote/mfe/src/index.html",
+        "main": "apps/instant-quote/mfe/src/main.ts",
         "polyfills": ["zone.js"],
-        "tsConfig": "apps/instant-quote/intant-quote/tsconfig.app.json",
+        "tsConfig": "apps/instant-quote/mfe/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
         "assets": [
-          "apps/instant-quote/intant-quote/src/favicon.ico",
-          "apps/instant-quote/intant-quote/src/assets"
+          "apps/instant-quote/mfe/src/favicon.ico",
+          "apps/instant-quote/mfe/src/assets"
         ],
-        "styles": ["apps/instant-quote/intant-quote/src/styles.scss"],
+        "styles": ["apps/instant-quote/mfe/src/styles.scss"],
         "scripts": []
       },
       "configurations": {
