--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start-website": "nx serve website-mfe --serve-path /",
     "gen-sitemap": "tools/generators/sitemap/script.sh",
-    "prerender-website":"nx prerender website-mfe --routes-file routes.txt"
+    "prerender-website": "nx prerender website-mfe --routes-file routes.txt"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +21,9 @@
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/platform-server": "~16.1.0",
     "@angular/router": "~16.1.0",
+    "@ngrx/effects": "~16.3.0",
+    "@ngrx/store": "~16.3.0",
+    "@ngrx/store-devtools": "~16.3.0",
     "@nguniversal/express-engine": "~16.2.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
@@ -45,6 +48,7 @@
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "~16.1.0",
     "@angular/language-service": "~16.1.0",
+    "@ngrx/schematics": "~16.0.0",
     "@nguniversal/builders": "~16.2.0",
     "@nx/cypress": "18.0.4",
     "@nx/eslint": "18.0.4",
@@ -69,6 +73,7 @@
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-cypress": "^2.13.4",
+    "jasmine-marbles": "~0.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
