--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,9 @@
       "@clutterfreefinds-v2/globals": ["libs/shared/globals/src/index.ts"],
       "@clutterfreefinds-v2/header": ["libs/shared/header/src/index.ts"],
       "@clutterfreefinds-v2/language": ["libs/shared/language/src/index.ts"],
-      "@clutterfreefinds-v2/toastr": ["libs/shared/toastr/src/index.ts"]
+      "@clutterfreefinds-v2/shared/pipes": ["libs/shared/pipes/src/index.ts"],
+      "@clutterfreefinds-v2/toastr": ["libs/shared/toastr/src/index.ts"],
+      "@clutterfreefinds/sort_pipe": ["libs/shared/pipes/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
