--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -21,7 +21,8 @@
       "@clutterfreefinds-v2/language": ["libs/shared/language/src/index.ts"],
       "@clutterfreefinds-v2/shared/pipes": ["libs/shared/pipes/src/index.ts"],
       "@clutterfreefinds-v2/toastr": ["libs/shared/toastr/src/index.ts"],
-      "@clutterfreefinds/sort_pipe": ["libs/shared/pipes/src/index.ts"]
+      "@clutterfreefinds/sort_pipe": ["libs/shared/pipes/src/index.ts"],
+      "@clutterfreefinds/iframe_url": ["libs/shared/pipes/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
