--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start-website": "nx serve website-mfe --serve-path /",
     "gen-sitemap": "tools/generators/sitemap/script.sh",
-    "prerender-website": "nx prerender website-mfe --routes-file routes.txt"
+    "prerender-website": "nx run website-mfe:prerender:production"
   },
   "private": true,
   "dependencies": {
