--- a/apps/website/mfe/project.json
+++ b/apps/website/mfe/project.json
@@ -32,6 +32,9 @@
       "scripts": [
         "node_modules/@popperjs/core/dist/umd/popper.min.js",
         "node_modules/bootstrap/dist/js/bootstrap.min.js"
+      ],
+      "allowedCommonJsDependencies":[
+        "moment"
       ]
       },
       "configurations": {
@@ -54,7 +57,14 @@
               "with": "libs/shared/globals/src/lib/environments/env.prod.ts"
             }
           ],
-          "outputHashing": "all"
+          "optimization": true,
+          "outputHashing": "all",
+          "sourceMap": false,
+          "namedChunks": false,
+          "aot": true,
+          "extractLicenses": true,
+          "vendorChunk": false,
+          "buildOptimizer": true
         },
         "development": {
           "optimization": false,
