--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,6 +20,7 @@
       "@clutterfreefinds-v2/header": ["libs/shared/header/src/index.ts"],
       "@clutterfreefinds-v2/language": ["libs/shared/language/src/index.ts"],
       "@clutterfreefinds-v2/shared/pipes": ["libs/shared/pipes/src/index.ts"],
+      "@clutterfreefinds-v2/store": ["libs/store/src/index.ts"],
       "@clutterfreefinds-v2/toastr": ["libs/shared/toastr/src/index.ts"],
       "@clutterfreefinds/iframe_url": ["libs/shared/pipes/src/index.ts"],
       "@clutterfreefinds/sort_pipe": ["libs/shared/pipes/src/index.ts"]
