--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start-website": "nx serve website-mfe --serve-path /",
     "gen-sitemap": "tools/generators/sitemap/script.sh",
     "prerender-website": "nx prerender website-mfe --prod && npm run postbuild",
-    "postbuild":"node postbuild.js",
+    "postbuild": "node postbuild.js",
     "build": "nx build website-mfe --prod && npm run postbuild",
-    "serve-ssr":"nx serve-ssr website-mfe --prod && npm run postbuild"
+    "serve-ssr": "nx serve-ssr website-mfe --prod && npm run postbuild"
   },
   "private": true,
   "dependencies": {
@@ -31,10 +31,10 @@
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@nx/angular": "18.0.4",
-    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
+    "flowbite": "^2.3.0",
     "moment": "^2.30.1",
     "ngx-toastr": "^18.0.0",
     "ngx-translate-cache": "^16.0.0",
@@ -74,6 +74,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.4.0",
     "cypress": "^13.0.0",
     "eslint": "~8.48.0",
     "eslint-config-prettier": "^9.0.0",
@@ -85,7 +86,9 @@
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "18.0.4",
+    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
+    "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.1.3"
