--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/bootstrap": "^5.2.10",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "4.17.14",
