--- a/package.json
+++ b/package.json
@@ -18,8 +18,6 @@
     "@angular/compiler": "~16.1.0",
     "@angular/core": "~16.1.0",
     "@angular/forms": "~16.1.0",
-    "@angular/material": "15.2.9",
-    "@angular/material-moment-adapter": "15.2.9",
     "@angular/platform-browser": "~16.1.0",
     "@angular/platform-browser-dynamic": "~16.1.0",
     "@angular/platform-server": "~16.1.0",
@@ -35,7 +33,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "flowbite": "^2.3.0",
-    "moment": "^2.30.1",
+    "flowbite-datepicker": "^1.2.6",
     "ngx-toastr": "^18.0.0",
     "ngx-translate-cache": "^16.0.0",
     "rxjs": "~7.8.0",
