chore: fis deployment of api on GCP

--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -7,14 +7,7 @@
     
   },
   "Host": {
-    "Port": 7130
+    "Port": 5291
 },
-  "AllowedHosts": "*",
-  "Kestrel": {
-    "Endpoints": {
-      "Https": {
-        "Url": "https://localhost:7130"
-      }
-    }
-  }
+  "AllowedHosts": "*"
 }
