--- a/apps/api/ClutterfreefindsV2.Api.csproj
+++ b/apps/api/ClutterfreefindsV2.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <OutputPath>obj</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,5 +12,10 @@
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
+
+  <Target Name="CheckNxModuleBoundaries" BeforeTargets="Build">
+   <!-- <Exec Command="node ../../node_modules/@nx-dotnet/core/src/tasks/check-module-boundaries.js -p api" ContinueOnError="true"/> -->
+    <!-- <Exec Command="node $(NodeModulesRelativePath)/node_modules/@nx-dotnet/core/src/tasks/check-module-boundaries.js -p api"/> -->
+</Target>
 
 </Project>
