--- a/apps/api/ClutterfreefindsV2.Api.csproj
+++ b/apps/api/ClutterfreefindsV2.Api.csproj
@@ -10,6 +10,8 @@
   <ItemGroup>
     <PackageReference Include="Google.Cloud.Firestore" Version="3.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="111.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
