--- a/package.json
+++ b/package.json
@@ -6,55 +6,52 @@
     "start": "nx run-many --target=serve --projects=website-mfe,api --parallel=4",
     "start-website": "nx serve website-mfe --serve-path /",
     "gen-sitemap": "tools/generators/sitemap/script.sh",
-    "prerender-website": "nx prerender website-mfe --prod && npm run postbuild",
-    "postbuild": "node postbuild.js",
-    "build": "nx build website-mfe --prod && npm run postbuild",
-    "serve-ssr": "nx serve-ssr website-mfe --prod && npm run postbuild",
-    "prepare": "nx g @nx-dotnet/core:restore"
+    "prerender-website": "npm run build && nx prerender website-mfe --prod",
+    "serve-ssr": "nx serve-ssr website-mfe",
+    "prepare": "nx g @nx-dotnet/core:restore",
+    "prebuild": "rm -rf apps/website/functions/public",
+    "build": "nx build website-mfe",
+    "fb:serve": "npm run build && npm run start",
+    "fb:deploy": "npm run build && cd apps/website/ &&  firebase deploy --only functions"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~16.1.0",
-    "@angular/cdk": "^15.2.9",
-    "@angular/common": "~16.1.0",
-    "@angular/compiler": "~16.1.0",
-    "@angular/core": "~16.1.0",
-    "@angular/forms": "~16.1.0",
-    "@angular/platform-browser": "~16.1.0",
-    "@angular/platform-browser-dynamic": "~16.1.0",
-    "@angular/platform-server": "~16.1.0",
-    "@angular/router": "~16.1.0",
-    "@ngrx/effects": "~16.3.0",
-    "@ngrx/store": "~16.3.0",
-    "@ngrx/store-devtools": "~16.3.0",
-    "@nguniversal/express-engine": "~16.2.0",
+    "@angular/animations": "^17.3.0",
+    "@angular/common": "^17.3.0",
+    "@angular/compiler": "^17.3.0",
+    "@angular/core": "^17.3.0",
+    "@angular/forms": "^17.3.0",
+    "@angular/platform-browser": "^17.3.0",
+    "@angular/platform-browser-dynamic": "^17.3.0",
+    "@angular/platform-server": "^17.3.0",
+    "@angular/router": "^17.3.0",
+    "@angular/ssr": "^17.3.8",
+    "@ngrx/effects": "^17.0.0",
+    "@ngrx/store": "^17.0.0",
+    "@ngrx/store-devtools": "^17.0.0",
     "@ngx-translate/core": "^15.0.0",
     "@ngx-translate/http-loader": "^8.0.0",
     "@nx/angular": "18.0.4",
-    "bootstrap": "^5.3.3",
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "flowbite": "^2.3.0",
     "flowbite-datepicker": "^1.2.6",
-    "ngx-toastr": "^18.0.0",
-    "ngx-translate-cache": "^16.0.0",
-    "rxjs": "~7.8.0",
+    "ngx-toastr": "^17.0.0",
+    "ngx-translate-cache": "^17.0.0",
+    "rxjs": "^7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.13.0"
+    "zone.js": "~0.14.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.1.0",
-    "@angular-devkit/core": "~16.1.0",
-    "@angular-devkit/schematics": "~16.1.0",
-    "@angular-eslint/eslint-plugin": "~16.0.0",
-    "@angular-eslint/eslint-plugin-template": "~16.0.0",
-    "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "~16.1.0",
-    "@angular/language-service": "~16.1.0",
-    "@fullhuman/postcss-purgecss": "^6.0.0",
-    "@ngrx/schematics": "~16.0.0",
-    "@nguniversal/builders": "~16.2.0",
+    "@angular-devkit/build-angular": "^17.3.8",
+    "@angular-devkit/schematics": "^17.0.0",
+    "@angular-eslint/eslint-plugin": "^17.0.0",
+    "@angular-eslint/eslint-plugin-template": "^17.0.0",
+    "@angular-eslint/template-parser": "^17.0.0",
+    "@angular/cli": "^17.3.8",
+    "@angular/compiler-cli": "^17.3.0",
+    "@angular/language-service": "^17.0.0",
+    "@ngrx/schematics": "^17.0.0",
     "@nx-dotnet/core": "^2.2.0",
     "@nx/cypress": "18.0.4",
     "@nx/eslint": "18.0.4",
@@ -63,17 +60,17 @@
     "@nx/js": "18.0.4",
     "@nx/web": "18.0.4",
     "@nx/workspace": "18.0.4",
-    "@schematics/angular": "~16.1.0",
+    "@schematics/angular": "^17.0.0",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@types/bootstrap": "^5.2.10",
     "@types/cookie-parser": "^1.4.6",
-    "@types/express": "4.17.14",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
     "@types/minimist": "^1.2.5",
-    "@types/node": "18.16.9",
+    "@types/node": "^18.18.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "autoprefixer": "^10.4.0",
@@ -88,11 +85,10 @@
     "jest-preset-angular": "~13.1.4",
     "jsonc-eslint-parser": "^2.1.0",
     "nx": "18.0.4",
-    "postcss": "^8.4.5",
     "prettier": "^2.6.2",
     "tailwindcss": "^3.0.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.1.3"
+    "typescript": "~5.4.2"
   }
 }
