config: configurations for nx

--- a/nx.json
+++ b/nx.json
@@ -1,5 +1,16 @@
 {
   "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "targetDefaults": {
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "inputs": [
+        "production",
+        "^production"
+      ]
+    }
+  },
   "namedInputs": {
     "default": [
       "{projectRoot}/**/*",
@@ -19,38 +30,6 @@
       "!{projectRoot}/cypress.config.[jt]s"
     ],
     "sharedGlobals": []
-  },
-  "targetDefaults": {
-    "@angular-devkit/build-angular:application": {
-      "cache": true,
-      "dependsOn": [
-        "^build"
-      ],
-      "inputs": [
-        "production",
-        "^production"
-      ]
-    },
-    "@nx/angular:ng-packagr-lite": {
-      "cache": true,
-      "dependsOn": [
-        "^build"
-      ],
-      "inputs": [
-        "production",
-        "^production"
-      ]
-    },
-    "@angular-devkit/build-angular:browser": {
-      "cache": true,
-      "dependsOn": [
-        "^build"
-      ],
-      "inputs": [
-        "production",
-        "^production"
-      ]
-    }
   },
   "plugins": [
     {
