chore: update office and shop

--- a/apps/api/appsettings.json
+++ b/apps/api/appsettings.json
@@ -9,5 +9,12 @@
   "Host": {
     "Port": 5291
 },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "https://localhost:7130"
+      }
+    }
+  }
 }
